# conciliation

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Customer_Account_Statement_3_PM_1767607345034.xls  Customer_Account_Statement_9_AM_1767607345034.xls  Pasted-Let-s-add-functionality-to-the-FETCH-ORDERS-FROM-API-Cr_1765967394640.txt  Pasted-Let-s-add-functionality-to-the-FETCH-ORDERS-FROM-API-Cr_1765967866058.txt  Pasted-Let-s-add-functionality-to-the-FETCH-ORDERS-FROM-API-Th_1765966927159.txt  Pasted-The-Reconciliation-Cockpit-is-a-financial-interface-des_1765955972910.txt  Pasted-def-create-old-hash-code-row-column-mapping-Creates-a-S_1766144296970.txt  Pasted-def-create-transaction-hash-row-column-mapping-Create-S_1766143957719.txt  drizzle-data-2025-12-22T14_40_16.361Z_1766415333980.csv
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx  Sidebar.tsx
client/src/lib/: mockData.ts  types.ts
client/src/pages/: all-transactions.tsx  batches.tsx  commission-reconciliations.tsx  dashboard.tsx  landing.tsx  login.tsx  paid-orders-reconciliation.tsx  reconciled.tsx  reconciliation.tsx  unreconciled-transactions.tsx
migrations/: 0000_funny_hiroim.sql
migrations/meta/: 0000_snapshot.json  _journal.json
python_services/: bank_upload.py  export_reconciliation.py  process_bank_file.py
scripts/: bank_transaction_processor.py  export_reconciliation.py  fetch_orders.py  suggest_matches.py
server/: db.ts  fileProcessor.ts  index.ts  orderMapper.ts  routes.ts  storage.ts
shared/: schema.ts
