[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fuzzywuzzy>=0.18.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "unicodedata2>=17.0.0",
]
